--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,8 @@
 // Body
 $body-bg: #f8fafc;
+$theme-color: #e41414;
+$img-placeholder-color:#eeeeee;
+$theme-darkest-color:#000000;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
