--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,33 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+.page-title{
+    width: 100%;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #eee;
+}
+
 .product-card{
-    margin: 5px;
+   margin-bottom:10px;
+}
+.card-img-top{
+    min-height: 250px!important;
+    max-height: 250px!important;
+    background-color: $img-placeholder-color;
+}
+.buy-btn{
+    min-width: 100%!important;
+    border-radius: 0px;
+}
+a .btn-primary, .btn-primary{
+    background-color: $theme-color;
+    border-color:  $theme-color;
+}
+
+a .btn-primary:hover, .btn-primary:hover{
+    background-color: $theme-darkest-color;
+    border-color:  $theme-darkest-color;
+}
+.text-primary{
+    color: $theme-color;
 }
