--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,9 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #f7f7f7;
 $theme-color: #e41414;
 $img-placeholder-color:#eeeeee;
 $theme-darkest-color:#000000;
+$theme-mild-dark-color: #2c2b2b;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
