--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,3 +37,26 @@ a .btn-primary:hover, .btn-primary:hover{
 .text-primary{
     color: $theme-color!important;
 }
+
+.product-list-card, .product-list-card .row{
+    align-items: center;
+}
+
+.flexed{
+    display:flex; 
+    align-items:center;
+    justify-content:center;
+}
+
+.v-flex{
+    display:flex; 
+    flex-direction: column;
+}
+
+.h-flex{
+    display:flex; 
+    justify-content:center;
+}
+.list-img img{
+    background-color: $img-placeholder-color;
+}
